@@ -302,8 +302,9 @@ Copyright \(co 2003-2013 FreeIPMI Core Team.
 .SH "SEE ALSO"
 libfreeipmi(3), libipmiconsole(3), libipmidetect(3),
 libipmimonitoring(3), freeipmi.conf(5), bmc-config(8), bmc-device(8),
-bmc-info(8), bmc-watchdog(8), ipmi-chassis(8), ipmi-fru(8),
-ipmi-locate(8), ipmi-oem(8), ipmi-pef-config(8), ipmi-pet(8),
-ipmi-raw(8), ipmi-sel(8), ipmi-sensors(8), ipmi-sensors-config(8),
-ipmiconsole(8), ipmidetect(8), ipmiping(8), ipmipower(8), rmcpping(8)
+bmc-info(8), bmc-watchdog(8), ipmi-chassis(8), ipmi-chassis-config(8),
+ipmi-fru(8), ipmi-locate(8), ipmi-oem(8), ipmi-pef-config(8),
+ipmi-pet(8), ipmi-raw(8), ipmi-sel(8), ipmi-sensors(8),
+ipmi-sensors-config(8), ipmiconsole(8), ipmidetect(8), ipmiping(8),
+ipmipower(8), rmcpping(8)
 #include <@top_srcdir@/man/manpage-common-homepage.man>
